--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,9 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+back/.env
+back/package-lock.json
+back/node_modules/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
