add main UI markup

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+package-lock.json
+.remote-sync.json
+.ftpignore
+.ftpconfig
+dist/
 # Logs
 logs
 *.log
@@ -74,6 +79,8 @@ typings/
 back/.env
 back/package-lock.json
 back/node_modules/
+front/package-lock.json
+front/node_modules/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
