--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,8 @@
     "element-plus": "^1.0.2-beta.32",
     "equal-vue": "^0.7.20",
     "tailwindcss": "^2.0.3",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
