--- a/front/package.json
+++ b/front/package.json
@@ -7,10 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.32",
     "equal-vue": "^0.7.20",
     "tailwindcss": "^2.0.3",
     "vue": "^3.0.5",
+    "vue-axios": "^3.2.4",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
