--- a/front/package.json
+++ b/front/package.json
@@ -15,10 +15,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
-    "@vue/compiler-sfc": "^3.0.5",
-    "@vuedx/typecheck": "^0.6.0",
-    "@vuedx/typescript-plugin-vue": "^0.6.0",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.65"
+    "@vue/compiler-sfc": "^3.0.6",
+    "@vuedx/typecheck": "^0.6.3",
+    "@vuedx/typescript-plugin-vue": "^0.6.3",
+    "typescript": "^4.2.2",
+    "vite": "^2.0.3"
   }
 }
