--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@vue/compiler-sfc": "^3.0.6",
     "@vuedx/typecheck": "^0.6.3",
     "@vuedx/typescript-plugin-vue": "^0.6.3",
+    "autoprefixer": "^10.2.4",
     "typescript": "^4.2.2",
     "vite": "^2.0.3"
   }
