--- a/back/package.json
+++ b/back/package.json
@@ -10,11 +10,14 @@
   "author": "Alyaxey Yaskevich",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "connect-pg-simple": "^6.2.1",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "generate-password": "^1.6.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1"
