--- a/front/package.json
+++ b/front/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "persona",
-  "version": "0.1.0",
+  "name": "persona-frontend",
+  "version": "0.4.0",
+  "description": "Client UI for Persona project",
+  "author": "Alyaxey Yaskevich",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite preview",
     "build": "vuedx-typecheck . && vite build",
-    "serve": "vite preview"
+    "dev": "vite"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -14,20 +16,21 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.3",
     "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~v5.0.0-alpha.7",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-service": "~4.5.13",
     "@vue/compiler-sfc": "^3.0.11",
     "@vuedx/typecheck": "^0.6.3",
     "@vuedx/typescript-plugin-vue": "^0.6.3",
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.26.0",
+    "eslint-plugin-vue": "^7.9.0",
     "typescript": "^4.2.4",
-    "vite": "^2.3.3",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "^4.5.13",
-    "@vue/cli-service": "~4.5.13",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.9.0"
+    "vite": "^2.3.3"
   },
   "eslintConfig": {
     "root": true,
@@ -39,7 +42,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
@@ -47,5 +50,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "license": "ISC"
 }
