--- a/back/package.json
+++ b/back/package.json
@@ -1,7 +1,7 @@
 {
   "name": "persona-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Server application for Persona project",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,13 +13,13 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "dotenv": "^8.2.0",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "generate-password": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.5.1",
+    "pg": "^8.6.0",
     "pg-format": "^1.0.4"
   }
 }
