--- a/front/package.json
+++ b/front/package.json
@@ -42,7 +42,15 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "parserOptions": {
+        "requireConfigFile": false,
+        "babelOptions": {
+          "plugins": [
+            "@babel/plugin-proposal-class-properties"
+          ]
+        }
+      }
     },
     "rules": {}
   },
