--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,8 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "dotenv": "^9.0.2",
+    "connect-history-api-fallback": "^1.6.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "generate-password": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
