--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persona-frontend",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Client UI for Persona project",
   "author": "Alyaxey Yaskevich",
   "scripts": {
@@ -10,27 +10,27 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "element-plus": "^1.0.2-beta.55",
-    "vue": "^3.0.5",
+    "element-plus": "^1.0.2-beta.70",
+    "vue": "3.1.5",
     "vue-meta": "^3.0.0-alpha.6",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.14.7",
-    "@vitejs/plugin-vue": "^1.2.5",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@vitejs/plugin-vue": "^1.4.0",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~v5.0.0-alpha.7",
     "@vue/cli-plugin-router": "^4.5.13",
     "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "^3.1.5",
+    "@vue/compiler-sfc": "3.1.5",
     "@vuedx/typecheck": "^0.7.4",
     "@vuedx/typescript-plugin-vue": "^0.7.4",
     "autoprefixer": "^10.3.1",
-    "eslint": "^7.31.0",
-    "eslint-plugin-vue": "^7.14.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.16.0",
     "typescript": "^4.3.5",
-    "vite": "^2.4.2"
+    "vite": "^2.4.4"
   },
   "eslintConfig": {
     "root": true,
