--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -13,6 +13,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "types": ["element-plus/global"],
     "paths": {
       "@/*": [
         "src/*"
