--- a/front/package.json
+++ b/front/package.json
@@ -1,58 +1,35 @@
 {
   "name": "persona-frontend",
-  "version": "0.8.0",
+  "version": "1.3.0",
   "description": "Client UI for Persona project",
   "author": "Alyaxey Yaskevich",
+  "type": "module",
   "scripts": {
-    "serve": "vite preview",
-    "build": "vuedx-typecheck . && vite build",
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "element-plus": "^1.0.2-beta.70",
-    "vue": "3.1.5",
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.5",
+    "element-plus": "^2.5.1",
+    "ts-node": "^10.9.2",
+    "unplugin-icons": "^0.18.2",
+    "vue": "3.4.14",
     "vue-meta": "^3.0.0-alpha.6",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/eslint-parser": "^7.15.0",
-    "@vitejs/plugin-vue": "^1.4.0",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~v5.0.0-alpha.7",
-    "@vue/cli-plugin-router": "^4.5.13",
-    "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "3.1.5",
-    "@vuedx/typecheck": "^0.7.4",
-    "@vuedx/typescript-plugin-vue": "^0.7.4",
-    "autoprefixer": "^10.3.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.16.0",
-    "typescript": "^4.3.5",
-    "vite": "^2.4.4"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser",
-      "parserOptions": {
-        "requireConfigFile": false,
-        "babelOptions": {
-          "plugins": [
-            "@babel/plugin-proposal-class-properties"
-          ]
-        }
-      }
-    },
-    "rules": {}
+    "@babel/types": "^7.23.6",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "autoprefixer": "^10.4.17",
+    "sass": "^1.69.7",
+    "typescript": "^5.3.3",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.0.11",
+    "vite-ssg": "^0.23.6",
+    "vue-tsc": "^1.8.27"
   },
   "browserslist": [
     "> 1%",
