--- a/back/package.json
+++ b/back/package.json
@@ -1,26 +1,32 @@
 {
   "name": "persona-backend",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Server application for Persona project",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alyaxey Yaskevich",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
-    "connect-history-api-fallback": "^1.6.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "generate-password": "^1.6.1",
-    "jsonwebtoken": "^8.5.1",
-    "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0",
-    "pg": "^8.7.1",
+    "connect-history-api-fallback": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "generate-password": "^1.7.1",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
     "pg-format": "^1.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0"
   }
 }
