--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persona-frontend",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Client UI for Persona project",
   "author": "Alyaxey Yaskevich",
   "type": "module",
@@ -11,30 +11,27 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.6.5",
-    "element-plus": "^2.5.1",
+    "axios": "^1.6.8",
+    "d3-graph-controller": "^3.0.7",
+    "element-plus": "^2.6.3",
     "ts-node": "^10.9.2",
-    "unplugin-icons": "^0.18.2",
-    "vue": "3.4.14",
+    "unplugin-icons": "^0.18.5",
+    "vue": "3.4.21",
     "vue-meta": "^3.0.0-alpha.6",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@babel/types": "^7.23.6",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "autoprefixer": "^10.4.17",
-    "sass": "^1.69.7",
-    "typescript": "^5.3.3",
-    "unplugin-auto-import": "^0.17.3",
+    "@babel/types": "^7.24.0",
+    "@types/d3": "^7.4.3",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "sass": "^1.72.0",
+    "typescript": "^5.4.3",
+    "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.11",
+    "vite": "^5.2.7",
     "vite-ssg": "^0.23.6",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.0.7"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
   "license": "ISC"
 }
