--- a/front/package.json
+++ b/front/package.json
@@ -11,27 +11,27 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.6.8",
-    "d3-graph-controller": "^3.0.7",
-    "element-plus": "^2.6.3",
+    "axios": "^1.7.7",
+    "d3-graph-controller": "^3.0.10",
+    "element-plus": "^2.8.4",
     "ts-node": "^10.9.2",
-    "unplugin-icons": "^0.18.5",
-    "vue": "3.4.21",
-    "vue-meta": "^3.0.0-alpha.6",
-    "vue-router": "^4.3.0"
+    "unplugin-icons": "^0.19.3",
+    "vue": "3.5.10",
+    "vue-page-title": "^2.2.2",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/types": "^7.24.0",
+    "@babel/types": "^7.25.6",
     "@types/d3": "^7.4.3",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.19",
-    "sass": "^1.72.0",
-    "typescript": "^5.4.3",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.7",
-    "vite-ssg": "^0.23.6",
-    "vue-tsc": "^2.0.7"
+    "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
+    "sass": "^1.79.4",
+    "typescript": "^5.6.2",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.8",
+    "vite-ssg": "^0.23.8",
+    "vue-tsc": "^2.1.6"
   },
   "license": "ISC"
 }
