--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "d3-graph-controller": "^3.0.10",
     "element-plus": "^2.8.4",
+    "json-2-csv": "^5.5.6",
     "ts-node": "^10.9.2",
     "unplugin-icons": "^0.19.3",
     "vue": "3.5.10",
@@ -21,7 +22,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/types": "^7.25.6",
+    "@babel/types": "^7.25.7",
     "@types/d3": "^7.4.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
