--- a/front/package.json
+++ b/front/package.json
@@ -11,28 +11,44 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.7.7",
-    "d3-graph-controller": "^3.0.10",
-    "element-plus": "^2.8.4",
-    "json-2-csv": "^5.5.6",
+    "@tiptap/extension-blockquote": "^2.11.9",
+    "@tiptap/extension-bold": "^2.11.9",
+    "@tiptap/extension-character-count": "^2.11.9",
+    "@tiptap/extension-color": "^2.11.9",
+    "@tiptap/extension-document": "^2.11.9",
+    "@tiptap/extension-dropcursor": "^2.11.9",
+    "@tiptap/extension-gapcursor": "^2.11.9",
+    "@tiptap/extension-heading": "^2.11.9",
+    "@tiptap/extension-history": "^2.11.9",
+    "@tiptap/extension-image": "^2.11.9",
+    "@tiptap/extension-italic": "^2.11.9",
+    "@tiptap/extension-paragraph": "^2.11.9",
+    "@tiptap/extension-placeholder": "^2.11.9",
+    "@tiptap/extension-text": "^2.11.9",
+    "@tiptap/vue-3": "2.11.9",
+    "axios": "^1.9.0",
+    "d3-graph-controller": "^3.1.0",
+    "element-plus": "^2.9.9",
+    "json-2-csv": "^5.5.9",
     "ts-node": "^10.9.2",
-    "unplugin-icons": "^0.19.3",
-    "vue": "3.5.10",
+    "unplugin-icons": "^22.1.0",
+    "vue": "3.5.13",
     "vue-page-title": "^2.2.2",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/types": "^7.25.7",
+    "@babel/types": "^7.27.1",
     "@types/d3": "^7.4.3",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "sass": "^1.79.4",
-    "typescript": "^5.6.2",
-    "unplugin-auto-import": "^0.18.3",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.8",
-    "vite-ssg": "^0.23.8",
-    "vue-tsc": "^2.1.6"
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "autoprefixer": "^10.4.21",
+    "sass": "^1.87.0",
+    "typescript": "^5.8.3",
+    "unplugin-auto-import": "^19.1.2",
+    "unplugin-vue-components": "^28.5.0",
+    "vite": "^6.3.4",
+    "vite-ssg": "^26.1.1",
+    "vue-tsc": "^2.2.10"
   },
   "license": "ISC"
 }
