--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persona-backend",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Server application for Persona project",
   "main": "index.js",
   "type": "module",
@@ -12,21 +12,29 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "compression": "^1.7.4",
+    "body-parser": "^2.2.0",
+    "chardet": "^2.1.0",
+    "colors": "^1.4.0",
+    "compression": "^1.8.0",
     "connect-history-api-fallback": "^2.0.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "diff": "^7.0.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "fast-xml-parser": "^5.2.1",
+    "fflate": "^0.8.2",
     "generate-password": "^1.7.1",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
+    "locale-codes": "^1.3.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.11.3",
-    "pg-format": "^1.0.4"
+    "pg": "^8.15.6",
+    "pg-format": "^1.0.4",
+    "unidecode": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0"
+    "eslint-plugin-import": "^2.31.0"
   }
 }
